Digital Credentials: WebCoreArgumentCoders serialization is missing OrgIsoMdoc https://bugs.webkit.org/show_bug.cgi?id=288542 rdar://145608213
Reviewed by Tim Horton.

Adds missing enum value of OrgIsoMdoc to WebCoreArgumentCoders.

* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/291096@main

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -6478,7 +6478,8 @@ struct WebCore::DigitalCredentialsResponseData {
 };
 
 [Nested] enum class WebCore::IdentityCredentialProtocol : uint8_t {
-    Openid4vp
+    Openid4vp,
+    OrgIsoMdoc
 };
 
 #endif // HAVE(DIGITAL_CREDENTIALS_UI)
