[GStreamer][MediaStream] Basic support for track configurationchange events https://bugs.webkit.org/show_bug.cgi?id=288466
Reviewed by Xabier Rodriguez-Calvar.

If we are capturing a default microphone or camera and the user changes the default device in the OS
session settings, we should keep capture the new default device. This is now supported, excepted for
screen capture. The GstDeviceProvider emits device-changed messages on the bus, so by monitoring
those we can propagate changes in the CaptureDeviceManager and notify observing RealtimeMediaSources
which then notify the MediaStreamTrackPrivate which relays the notification to the MediaStreamTrack
which emits the configurationchange event. On the GStreamer capturer side, when the default device
changes the pipeline is partly teared down and a new one is spun up, using the new GstDevice.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp:
(WebCore::RealtimeMediaSource::configurationChanged):
* Source/WebCore/platform/mediastream/RealtimeMediaSource.h:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerAudioCaptureSource.cpp:
(WebCore::GStreamerAudioCaptureSource::captureDeviceUpdated):
* Source/WebCore/platform/mediastream/gstreamer/GStreamerAudioCaptureSource.h:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.cpp:
(WebCore::GStreamerCaptureDeviceManager::captureDeviceFromGstDevice):
(WebCore::GStreamerCaptureDeviceManager::addDevice):
(WebCore::GStreamerCaptureDeviceManager::removeDevice):
(WebCore::GStreamerCaptureDeviceManager::updateDevice):
(WebCore::GStreamerCaptureDeviceManager::refreshCaptureDevices):
* Source/WebCore/platform/mediastream/gstreamer/GStreamerCaptureDeviceManager.h:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerCapturer.cpp:
(WebCore::GStreamerCapturer::tearDown):
(WebCore::GStreamerCapturer::setDevice):
(WebCore::GStreamerCapturer::setupPipeline):
* Source/WebCore/platform/mediastream/

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -6522,6 +6522,7 @@ header: <WebCore/MockMediaDevice.h>
     String persistentId;
     String label;
     OptionSet<WebCore::MockMediaDevice::Flag> flags;
+    bool isDefault;
     std::variant<WebCore::MockMicrophoneProperties, WebCore::MockSpeakerProperties, WebCore::MockCameraProperties, WebCore::MockDisplayProperties> properties;
 };
 
