[GPUP][iOS] Remove sandbox telemetry for IOSurfaceAcceleratorClient https://bugs.webkit.org/show_bug.cgi?id=288499 rdar://145485115
Reviewed by Sihui Liu.

Telemetry has been collected, so we can remove it now.

* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in:

Canonical link: https://commits.webkit.org/291136@main

--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in
@@ -281,7 +281,7 @@
     (allow mach-lookup
         (global-name "com.apple.CARenderServer"))
 
-    (allow iokit-open-user-client (with telemetry) (with report)
+    (allow iokit-open-user-client
         (iokit-user-client-class "IOSurfaceAcceleratorClient")
         (apply-message-filter
             (allow (with telemetry) (with report) (with message "IOSurfaceAcceleratorClient")
