--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -1088,9 +1088,13 @@
     (global-name "com.apple.relatived.tempest"))
 
 (if (equal? (param "ENABLE_SANDBOX_MESSAGE_FILTER") "YES")
-    (allow IOKIT_OPEN_USER_CLIENT (with report) (with telemetry)
+    (allow IOKIT_OPEN_USER_CLIENT
         (iokit-user-client-class "AppleAVDUserClient")
         (apply-message-filter
+            (allow iokit-external-method
+                (iokit-method-number 0 1 2 3 4))
+            (allow iokit-async-external-method
+                (iokit-method-number 8))
             (allow (with report) (with telemetry)
                 iokit-async-external-method
                 iokit-external-method
