--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -158,7 +158,7 @@
                     iokit-external-method
                     iokit-external-trap)
                 (allow iokit-external-method
-                    (iokit-method-number 0 2 5 6 7 8 10 15 16 17 29 31 40 256 258 261 263 264))
+                    (iokit-method-number 0 2 5 6 7 8 9 10 14 15 16 17 28 29 30 31 39 40 256 258 261 263 264))
                 (allow iokit-external-trap
                     (iokit-trap-number 0 1 3))
                 (allow iokit-async-external-method
