[GPUP][iOS] Add required syscall to sandbox https://bugs.webkit.org/show_bug.cgi?id=288502 rdar://145485850
Reviewed by Sihui Liu.

* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in:

Canonical link: https://commits.webkit.org/291168@main

--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in
@@ -959,6 +959,7 @@
     io_service_get_matching_services_bin
     io_service_open_extended
     mach_eventlink_associate
+    mach_eventlink_create
     mach_exception_raise
     mach_memory_entry_ownership
     mach_port_extract_right
