[text-wrap-style:pretty] Add feature flag for pretty. https://bugs.webkit.org/show_bug.cgi?id=288649 <rdar://145692254>
Reviewed by Tim Nguyen.

This is a partial revert of https://commits.webkit.org/291092@main

We want to keep the CSSTextWrapPrettyEnabled flag so we can easily
disable text-wrap-style:pretty if needed, but still want to turn it
on by default.

Canonical link: https://commits.webkit.org/291177@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -1679,6 +1679,20 @@ CSSTextUnderlinePositionLeftRightEnabled:
       default: true
     WebCore:
       default: true
+      
+CSSTextWrapPrettyEnabled:
+   type: bool
+   status: stable
+   category: css
+   humanReadableName: "CSS text-wrap: pretty"
+   humanReadableDescription: "Enable the pretty value for text-wrap-style"
+   defaultValue:
+     WebKitLegacy:
+       default: true
+     WebKit:
+       default: true
+     WebCore:
+       default: true
 
 CSSTextWrapStyleEnabled:
   type: bool
