--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in
@@ -1505,3 +1505,7 @@
             (apply subpath issue-extension-secondary-paths)
         )))
 #endif
+
+#if __has_include(<WebKitAdditions/WebContentSandbox-ios.defs>)
+#include <WebKitAdditions/WebContentSandbox-ios.defs>
+#endif
