Add hooks to control default state of vector-based controls on macOS and Mac Catalyst https://bugs.webkit.org/show_bug.cgi?id=288626 rdar://145674935
Reviewed by Wenson Hsieh.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:
* Source/WebKitLegacy/mac/WebView/WebPreferencesDefaultValues.h:
* Source/WebKitLegacy/mac/WebView/WebPreferencesDefaultValues.mm:

Canonical link: https://commits.webkit.org/291272@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -4593,9 +4593,9 @@ MacStyleControlsOnCatalyst:
   condition: ENABLE(MAC_STYLE_CONTROLS_ON_CATALYST)
   defaultValue:
     WebKit:
-      default: false
+      default: defaultMacStyleControlsOnCatalyst()
     WebKitLegacy:
-      default: false
+      default: WebKit::defaultMacStyleControlsOnCatalyst()
     WebCore:
       default: false
 
@@ -8193,9 +8193,9 @@ VectorBasedControlsOnMacEnabled:
   condition: ENABLE(VECTOR_BASED_CONTROLS_ON_MAC)
   defaultValue:
     WebKit:
-      default: false
+      default: defaultVectorBasedControlsOnMacEnabled()
     WebKitLegacy:
-      default: false
+      default: WebKit::defaultVectorBasedControlsOnMacEnabled()
     WebCore:
       default: false
 
