[Cocoa] Add default preference method for PreferSpatialAudioExperience rdar://145792591 https://bugs.webkit.org/show_bug.cgi?id=288768
Reviewed by Andy Estes.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/Shared/WebPreferencesDefaultValues.cpp:
(WebKit::defaultPreferSpatialAudioExperience):
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:

Canonical link: https://commits.webkit.org/291277@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -5957,7 +5957,7 @@ PreferSpatialAudioExperience:
     WebKitLegacy:
       default: false
     WebKit:
-      default: false
+      default: WebKit::defaultPreferSpatialAudioExperience()
     WebCore:
       default: false
   defaultsOverridable: true
