--- a/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
+++ b/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
@@ -1385,11 +1385,13 @@
             "com.apple.iconservices"
             "com.apple.iconservices.store")))
 
+#if !ENABLE(LAUNCHSERVICES_SANDBOX_EXTENSION_BLOCKING)
 (allow mach-lookup
     (require-all
         (extension "com.apple.webkit.extension.mach")
         (require-not (webcontent-process-launched))
         (global-name "com.apple.coreservices.launchservicesd")))
+#endif
 
 (deny mach-lookup (with no-report)
     (global-name "com.apple.audio.AudioComponentRegistrar"))
