Add a feature flag for using hosted blur materials in media controls https://bugs.webkit.org/show_bug.cgi?id=288770 rdar://145793721
Reviewed by Aditya Keerthi.

Added a feature flag to enable use of hosted blur materials in built-in media controls.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Canonical link: https://commits.webkit.org/291300@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -3450,6 +3450,20 @@ HiddenPageDOMTimerThrottlingEnabled:
     WebCore:
       default: false
 
+HostedBlurMaterialInMediaControlsEnabled:
+  type: bool
+  status: internal
+  humanReadableName: "Hosted blur material in media controls"
+  humanReadableDescription: "Enable hosted blur material in media controls"
+  condition: HAVE(MATERIAL_HOSTING)
+  defaultValue:
+    WebKit:
+      default: false
+    WebKitLegacy:
+      default: false
+    WebCore:
+      default: false
+
 HyperlinkAuditingEnabled:
   type: bool
   status: embedder
